refactor: replace deprecated URL constructors with URI.create(...).toURL()